RESOLVED FIXED81055
Heap::destroy leaks CopiedSpace
https://bugs.webkit.org/show_bug.cgi?id=81055
Summary Heap::destroy leaks CopiedSpace
Mark Hahnenberg
Reported 2012-03-13 16:27:06 PDT
Currently we do not do anything to clean up memory in the CopiedSpace in Heap::destroy. We should add a destroy() function to CopiedSpace to remedy this.
Attachments
Patch (3.41 KB, patch)
2012-03-13 18:07 PDT, Mark Hahnenberg
ggaren: review+
Mark Hahnenberg
Comment 1 2012-03-13 16:27:22 PDT
Mark Hahnenberg
Comment 2 2012-03-13 18:07:07 PDT
Geoffrey Garen
Comment 3 2012-03-14 12:39:58 PDT
Comment on attachment 131766 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=131766&action=review > Source/JavaScriptCore/heap/Heap.cpp:383 > + m_storageSpace.destroy(); This should move above the size() ASSERT.
Mark Hahnenberg
Comment 4 2012-03-14 14:14:28 PDT
Note You need to log in before you can comment on or make changes to this bug.